Fix spacing in pricing section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -282,7 +282,7 @@ button {
 .pricing {
     display: flex;
     flex-direction: column;
-    padding-bottom: 20px;
+    padding: 15px 0 30px;
 }
 
 .price-item {
